--- a/2023_05_25.vcxproj
+++ b/2023_05_25.vcxproj
@@ -137,13 +137,16 @@
     <ClCompile Include="2023_06_08.c" />
     <ClCompile Include="2023_06_12.cpp" />
     <ClCompile Include="2023_06_15.cpp" />
-    <ClCompile Include="2023_06_16.cpp" />
+    <ClCompile Include="nQueen.cpp" />
     <ClCompile Include="IntQueue.c" />
     <ClCompile Include="IntStack.c" />
+    <ClCompile Include="2023_07_13.cpp" />
+    <ClCompile Include="SingleLinkedList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IntQueue.h" />
     <ClInclude Include="IntStack.h" />
+    <ClInclude Include="SingleLinkedList.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
