--- a/2023_05_25.vcxproj.filters
+++ b/2023_05_25.vcxproj.filters
@@ -99,6 +99,12 @@
     <ClCompile Include="SingleLinkedList.cpp">
       <Filter>소스 파일\2023_07_13</Filter>
     </ClCompile>
+    <ClCompile Include="2023_07_17.cpp">
+      <Filter>소스 파일\2023_07_17</Filter>
+    </ClCompile>
+    <ClCompile Include="ArrayLinkedList.cpp">
+      <Filter>소스 파일\2023_07_17</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IntQueue.h">
@@ -109,6 +115,9 @@
     </ClInclude>
     <ClInclude Include="SingleLinkedList.h">
       <Filter>소스 파일\2023_07_13</Filter>
+    </ClInclude>
+    <ClInclude Include="ArrayLinkedList.h">
+      <Filter>소스 파일\2023_07_17</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
