--- a/2023_05_25.vcxproj
+++ b/2023_05_25.vcxproj
@@ -138,7 +138,9 @@
     <ClCompile Include="2023_06_12.cpp" />
     <ClCompile Include="2023_06_15.cpp" />
     <ClCompile Include="2023_07_17.cpp" />
+    <ClCompile Include="2023_07_19.cpp" />
     <ClCompile Include="ArrayLinkedList.cpp" />
+    <ClCompile Include="DoublyLinkedList.cpp" />
     <ClCompile Include="nQueen.cpp" />
     <ClCompile Include="IntQueue.c" />
     <ClCompile Include="IntStack.c" />
@@ -147,6 +149,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ArrayLinkedList.h" />
+    <ClInclude Include="DoublyLinkedList.h" />
     <ClInclude Include="IntQueue.h" />
     <ClInclude Include="IntStack.h" />
     <ClInclude Include="SingleLinkedList.h" />
