--- a/2023_05_25.vcxproj.filters
+++ b/2023_05_25.vcxproj.filters
@@ -55,6 +55,9 @@
     <Filter Include="소스 파일\2023_07_17">
       <UniqueIdentifier>{487d4c7f-6656-4798-a4f2-fffc5810aff3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\2023_07_19">
+      <UniqueIdentifier>{5c706dd1-5727-40a7-92c3-576b09887dbe}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="2023_05_25.cpp">
@@ -105,6 +108,12 @@
     <ClCompile Include="ArrayLinkedList.cpp">
       <Filter>소스 파일\2023_07_17</Filter>
     </ClCompile>
+    <ClCompile Include="2023_07_19.cpp">
+      <Filter>소스 파일\2023_07_19</Filter>
+    </ClCompile>
+    <ClCompile Include="DoublyLinkedList.cpp">
+      <Filter>소스 파일\2023_07_19</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IntQueue.h">
@@ -118,6 +127,9 @@
     </ClInclude>
     <ClInclude Include="ArrayLinkedList.h">
       <Filter>소스 파일\2023_07_17</Filter>
+    </ClInclude>
+    <ClInclude Include="DoublyLinkedList.h">
+      <Filter>소스 파일\2023_07_19</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
