--- a/2023_05_25.vcxproj
+++ b/2023_05_25.vcxproj
@@ -140,9 +140,11 @@
     <ClCompile Include="2023_07_17.cpp" />
     <ClCompile Include="2023_07_19.cpp" />
     <ClCompile Include="2023_07_20.cpp" />
+    <ClCompile Include="2023_07_21.cpp" />
     <ClCompile Include="ArrayLinkedList.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
     <ClCompile Include="DoublyLinkedList.cpp" />
+    <ClCompile Include="ChainHashTable.cpp" />
     <ClCompile Include="nQueen.cpp" />
     <ClCompile Include="IntQueue.c" />
     <ClCompile Include="IntStack.c" />
@@ -153,6 +155,7 @@
     <ClInclude Include="ArrayLinkedList.h" />
     <ClInclude Include="BinaryTree.h" />
     <ClInclude Include="DoublyLinkedList.h" />
+    <ClInclude Include="ChainHashTable.h" />
     <ClInclude Include="IntQueue.h" />
     <ClInclude Include="IntStack.h" />
     <ClInclude Include="SingleLinkedList.h" />
